kubernetes/task-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-service-deployment
  namespace: task-service
  labels:
    app: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: application
        image: ineffable24/tasklab-task-service:1.0.0
        ports:
        - containerPort: 8090
        volumeMounts:
          - name: secret-volume
            mountPath: /mnt/secret
        imagePullPolicy: Always
      volumes:
        - name: secret-volume
          secret:
            secretName: db-secret
