kubernetes/taskservice-service.yml
apiVersion: v1
kind: Service
metadata:
  name: taskservice-service
  namespace: task-service
spec:
  selector:
    app: app
  type: LoadBalancer
  ports:
    - name: taskservice-port
      protocol: TCP
      port: 8091
      targetPort: 8090
