kubernetes/task-service-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api
spec:
  ingressClassName: nginx
  rules:
  - host: task.com
    http:
      paths:
      - path: /groups
        pathType: Prefix
        backend:
          service:
            name: taskservice-service
            port:
              number: 8091
